--- a/pages/apiReference/style.scss
+++ b/pages/apiReference/style.scss
@@ -5,16 +5,17 @@ $banner-height: 72px;
 .api-reference-page {
   .api-reference-container {
     @include below-header;
+
     right: 0;
     bottom: 0;
     left: 0;
     width: 100%;
-
     overflow-x: hidden;
     overflow-y: auto;
 
     .api-reference {
       @include container-width;
+
       font-family: freight-sans-medium, sans-serif;
       color: $text-color;
       padding-top: 15px;
@@ -29,7 +30,6 @@ $banner-height: 72px;
         border: 1px solid $border-color2;
         font-size: 20px;
         padding: 0 50px 0 25px;
-
         margin-top: 14px;
         margin-bottom: 14px;
         height: 75px;
@@ -75,9 +75,8 @@ $banner-height: 72px;
           padding-left: 60px;
           color: $text-color;
           transform: translateY(-50%);
-
-          line-height: 30px;
-          font-size: 18px;
+          line-height: 24px;
+          font-size: 16px;
 
           @include desktop {
             line-height: 40px;
@@ -86,23 +85,25 @@ $banner-height: 72px;
 
           &.ios-sdk {
             background-image: url('../../static/images/ios-outline.png');
-            background-size: 25px 30px;
+            background-size: auto 24px;
 
             @include desktop {
               background-size: 32px 39px;
             }
           }
+
           &.android-sdk {
             background-image: url('../../static/images/android-outline.png');
-            background-size: 25px 30px;
+            background-size: auto 24px;
 
             @include desktop {
               background-size: 32px 37px;
             }
           }
+
           &.js-sdk {
             background-image: url('../../static/images/js-outline.png');
-            background-size: 26px 30px;
+            background-size: auto 24px;
 
             @include desktop {
               background-size: 32px 37px;
